# robot_interface_muduo

./: CMakeLists.txt
agv/: agv.cc  agv.h
agv_wait_action_finish/: action_finish.cc  action_finish.h
datetime/: Timestamp.h
kinematics/: kinematics.cc
logging/: FileUtil.cc  LogFile.cc  LogStream.cc  Logging.cc
mapping_table/: mapping_table.h
motion_list/: motion_list.cc  motion_list.h
muduo_net_example/: CMakeLists.txt
muduo_net_example/agv/: agv.cc
muduo_net_example/agv_wait_action_finish/: action_finish.h
muduo_net_example/kinematics/: kinematics.h
muduo_net_example/logging/: FileUtil.h  Logging.cc
muduo_net_example/mapping_table/: mapping_table.h
muduo_net_example/net/: Acceptor.cc  Connector.h  InetAddress.cc  SocketsOps.cc
muduo_net_example/robot_interface/: platform.cc
muduo_net_example/test/: EventLoop_test2.cc  Logging_test.cc
muduo_net_example/thread/: Condition.cc  CurrentThread.h
muduo_net_example/vision_detection/: vision_detection_position.h
net/: Buffer.h  Channel.cc  Endian.h  EventLoop.cc  TcpServer.cc  Timer.h  TimerQueue.cc  TimerQueue.h
pick_and_place/: jaka_pick_and_place.cc  jaka_pick_and_place.h  pick_and_place_position.cc  pick_and_place_position.h
plc/: jaka_plc.cc  my_plc.cc  my_plc.h
robot_interface/: codec.h  jaka.cc  jaka_robot_interface.cc  jaka_robot_interface.h  main.cc  platform_robot_interface.cc  platform_robot_interface.h  robot.cc  robot.h  robot_interface.cc  robot_interface.h
robot_interface_jaka/: CMakeLists.txt  README.md
robot_interface_jaka/datetime/: Timestamp.cc
robot_interface_jaka/kinematics/: pose_transform.h
robot_interface_jaka/logging/: AsyncLoggingDoubleBuffering.h  LogStream.h
robot_interface_jaka/net/: Connector.cc  EventLoop.h  TcpServer.h
robot_interface_jaka/pick_and_place/: jaka_pick_and_place.cc  jaka_pick_and_place.h
robot_interface_jaka/robot_interface/: jaka_robot_interface.cc  jaka_robot_interface.h
robot_interface_jaka/test/: TcpClient_test.cc
robot_interface_jaka/thread/: Atomic.h
robot_interface_jaka/vision_detection/: vision_detection_position.cc
robot_interface_platform/: CMakeLists.txt
robot_interface_platform/config/: config.cc  config.h
robot_interface_platform/logging/: AsyncLoggingQueue.h
robot_interface_platform/mapping_table/: mapping_table.cc
robot_interface_platform/net/: TimerId.h  TimerQueue.cc
robot_interface_platform/pick_and_place/: jaka_pick_and_place.cc  platform_pick_and_place.cc  platform_pick_and_place.h
robot_interface_platform/plc/: jaka_plc.cc  jaka_plc.h  platform_plc.cc  platform_plc.h
robot_interface_platform/robot_interface/: jaka_robot_interface.cc  platform.cc  platform_robot_interface.cc  platform_robot_interface.h
robot_interface_platform/test/: Buffer_test.cc  EventLoop_test1.cc  LogFile_test.cc  TcpConnection_test.cc  Timer_test1.cc
robotic_arm/: robot_client_tcp.cc  robot_client_tcp.h
test/: Channel_test.cc  EventLoop_test3.cc  LogFile_test.cc  TcpClient_test.cc  TcpServer_test.cc  Timer_test2.cc
thread/: Thread.cc
vision_detection/: vision_detection_position.cc  vision_detection_position.h
websocket/: websocket_endpoint.h
